<?xml version="1.0"?>
<package format="2">
  <name>slam</name>
  <version>1.2.1</version>
  <description>
    The slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author>Leon Jung</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>bringup</exec_depend>
  <!--  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>cartographer</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>cartographer_rviz</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>slam_karto</exec_depend>
  <exec_depend>frontier_exploration</exec_depend>
  <exec_depend>navigation_stage</exec_depend> -->
</package>
